whitespace fixes

--- a/app/webpacker/styles/header.scss
+++ b/app/webpacker/styles/header.scss
@@ -82,6 +82,10 @@
                 margin-right: 40px;
                 padding-right: 0px;
             }
+
+            ul {
+                list-style-type:none;
+            }
         }
 
         &__container {
