--- a/app/webpacker/styles/text.scss
+++ b/app/webpacker/styles/text.scss
@@ -70,6 +70,10 @@ a {
         font-size: 24px;
     }
 
+    .strapline-image {
+        font-size: 24px;
+    }
+
     .strapline-prominent {
         font-size: 20px;
     }
